force-app/main/default/objects/Opportunity/fields/DRL_SourceCampaignContactId__c.field-meta.xml
<CustomField>
    <fullName>DRL_SourceCampaignContactId__c</fullName>
    <label>First Contact Having Source Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>