force-app/main/default/objects/Opportunity/fields/DRL_SourceCampaignId__c.field-meta.xml
<CustomField>
    <fullName>DRL_SourceCampaignId__c</fullName>
    <label>Source Campaign Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>