force-app/main/default/objects/Opportunity/fields/DRL_SourceLastTouchMatch__c.field-meta.xml
<CustomField>
    <fullName>DRL_SourceLastTouchMatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Source &amp; Last Touch Campaign Match</label>
    <type>Checkbox</type>
</CustomField>