force-app/main/default/objects/Opportunity/validationRules/DRL_ContactChangeValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>DRL_ContactChangeValidation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNEW() ) ,  NOT(ISBLANK(PRIORVALUE( Contact__c )) ) ,  ISBLANK( Contact__c ))</errorConditionFormula>
    <errorDisplayField>Contact__c</errorDisplayField>
    <errorMessage>Contact cannot be empty!</errorMessage>
</ValidationRule>